--- a/index.html
+++ b/index.html
@@ -894,8 +894,8 @@
                     <div class="gift-container" id="gift-container">
                         <div class="gift-card">
                             <div class="gift-qr">
-                                <img src="images/XrPAsVdLyBLrzt92Jbdze4JWhxUnIACoh9vba045.jpg" alt="" class="groom_qr" style="max-width:100%">
-                                <img src="images/FACqfEHIH2VF7BMMEC0WVFlrFw5NLT5dxg80vqDf.jpg" alt="" class="groom_qr" style="max-width:100%">
+                                <img src="images/eda83cce-0a9f-4526-8ea5-b7ff7e536a86.jpeg" alt="" class="groom_qr" style="max-width:100%">
+                                <img src="images/74502703-7e2a-4700-969d-13e5c0992dce.jpeg" alt="" class="groom_qr" style="max-width:100%">
                             </div>
                             <div class="gift-body">
                             </div>
